--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#551630",
-        "titleBar.activeBackground": "#761F44",
-        "titleBar.activeForeground": "#FEFBFC"
+        "activityBar.background": "#4B2126",
+        "titleBar.activeBackground": "#682E36",
+        "titleBar.activeForeground": "#FDFBFC"
     }
 }
