--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-spreadsheet",
+  "name": "react-spreadsheet-client",
+  "homepage": "http://asudbury.github.io/react-spreadsheet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spreadsheet": "^0.5.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
